--- a/services/collacode/backend/requirements.txt
+++ b/services/collacode/backend/requirements.txt
@@ -3,6 +3,7 @@ aioredis==1.3.1
 async-timeout==3.0.1
 certifi==2019.11.28
 chardet==3.0.4
+diff-match-patch==20181111
 h11==0.8.1
 h2==3.1.1
 hiredis==1.0.1
