--- a/services/collacode/backend/requirements.txt
+++ b/services/collacode/backend/requirements.txt
@@ -9,15 +9,21 @@ h2==3.1.1
 hiredis==1.0.1
 hpack==3.0.0
 hstspreload==2020.1.22
+httpcore==0.3.0
 httptools==0.0.13
 httpx==0.9.3
 hyperframe==5.2.0
 idna==2.8
 jmespath==0.9.4
 multidict==4.7.4
+requests==2.22.0
+requests-async==0.5.0
 rfc3986==1.3.2
-sanic==19.12.2
+sanic==19.6.3
+Sanic-Cors==0.9.9.post4
+Sanic-Plugins-Framework==0.8.2.post1
 sniffio==1.1.0
 ujson==1.35
+urllib3==1.25.8
 uvloop==0.14.0
-websockets==8.1
+websockets==7.0
