Updated service (optimized ws routing)

--- a/services/collacode/docker_config/nginx/conf/app.conf
+++ b/services/collacode/docker_config/nginx/conf/app.conf
@@ -26,4 +26,13 @@ server {
                 proxy_set_header Connection "Upgrade";
                 proxy_pass http://backend:8000/api/code;
         }
+
+        location /api/subscribe {
+                include proxy_params;
+                proxy_http_version 1.1;
+                proxy_buffering off;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "Upgrade";
+                proxy_pass http://backend:8000/api/subscribe;
+        }
 }
