Added front build

--- a/services/collacode/docker-compose.yml
+++ b/services/collacode/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '2.4'
 
+volumes:
+  front:
+
 services:
   backend:
     build:
@@ -14,8 +17,16 @@ services:
     volumes:
       - ./docker_config/nginx/conf:/etc/nginx/conf.d
       - ./docker_config/nginx/nginx.proxy_params:/etc/nginx/proxy_params
+      - front:/front:ro
     restart: on-failure
 
+  front_build:
+    build:
+      context: .
+      dockerfile: docker_config/front_build/Dockerfile
+    restart: on-failure
+    volumes:
+    - front:/front
 
   redis:
     image: redis:5.0.5-alpine
