--- a/services/collacode/docker_config/nginx/conf/app.conf
+++ b/services/collacode/docker_config/nginx/conf/app.conf
@@ -3,15 +3,15 @@ server {
 
         server_name default;
 
-#         location / {
-#                 gzip on;
-#                 gzip_static on;
-#                 gzip_types text/plain text/css text/javascript application/javascript;
-#                 gzip_disable "msie6";
-#                 root /front;
-#                 try_files $uri /index.html;
-#                 autoindex off;
-#         }
+         location / {
+                 gzip on;
+                 gzip_static on;
+                 gzip_types text/plain text/css text/javascript application/javascript;
+                 gzip_disable "msie6";
+                 root /front;
+                 try_files $uri /index.html;
+                 autoindex off;
+         }
 
         location /api {
                 proxy_pass http://backend:8000/api;
