Final version of 7kek

--- a/services/7kek/Dockerfile
+++ b/services/7kek/Dockerfile
@@ -47,4 +47,6 @@ USER www
 
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
-CMD ["php-fpm"]
+
+COPY entrypoint.sh /tmp/run.sh
+ENTRYPOINT ["/tmp/run.sh"]
