--- a/services/7kek/search_engine/composer.json
+++ b/services/7kek/search_engine/composer.json
@@ -7,5 +7,13 @@
             "email": "priah@mail.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "react/event-loop": "^1.1",
+        "react/http": "^0.8.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "Search\\": "src/"
+        }
+    }
 }
