--- a/services/7kek/.env
+++ b/services/7kek/.env
@@ -1,7 +1,7 @@
 APP_NAME=7kek
 APP_ENV=local
 APP_KEY=base64:tgKDMmfD1abFqEHYDVW6tF69KEIKW0mrBNfgx9eNDZ8=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost:4455
 
 LOG_CHANNEL=stack
