--- a/services/7kek/docker-compose.yml
+++ b/services/7kek/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       SERVICE_TAGS: dev
     working_dir: /var/www
     volumes:
-      - ./:/var/www
+      - ./:/var/www:rw,delegated
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
