--- a/services/7kek/Dockerfile
+++ b/services/7kek/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:7.2-fpm
 
+MAINTAINER tg: @alagunto
+
 # Copy composer.lock and composer.json
 COPY composer.lock composer.json /var/www/
 
